<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dowableId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context="com.toufikhasan.massagebook.MainActivity"
    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_above="@+id/layoutAdsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:weightSum="12">

                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/quranerMa"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/one"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>

                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView

                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/muminerHatiar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/two"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>

                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/quranicShistachar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/three"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/umorDarazDil"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/four"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/dableStandard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/five"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/osriUsera"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/six"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/regegelenTo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/seven"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/sassotoJibonBidhan"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/eight"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/smartParenting"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/nine"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/mojjid"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/ten"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/oisiBorkoterCabi"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/eleven"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                    <!-- A CardView that contains a TextView -->
                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        card_view:cardCornerRadius="4dp">

                        <Button
                            android:id="@+id/bidaiBela"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/backgroundColor"
                            android:padding="10dp"
                            android:text="@string/twelve"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAdsLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#CDDC39"
            android:gravity="center"
            android:visibility="gone">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/ads_banner_home_bottom" />
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navication"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/backgroundColor"
        app:headerLayout="@layout/sitebar_menu_header"
        app:menu="@menu/sitebar_menu" />

</androidx.drawerlayout.widget.DrawerLayout>